--- a/jcargo/android/app/src/main/AndroidManifest.xml
+++ b/jcargo/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
         android:label="jcargo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+         <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDSk-X8BNurE6X3KAGH5X1lWug2Ra5"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
